--- a/assets/story/config.json
+++ b/assets/story/config.json
@@ -19,7 +19,14 @@
     "018.jpg",
     "019.jpg",
     "020.jpg",
-    "021.jpg"
+    "021.jpg",
+    "022.jpg",
+    "023.jpg",
+    "024.jpg",
+    "025.jpg",
+    "026.jpg",
+    "027.jpg",
+    "028.jpg"
   ],
   "rewardImages": [
     {
