--- a/assets/story/config.json
+++ b/assets/story/config.json
@@ -26,12 +26,21 @@
     "025.jpg",
     "026.jpg",
     "027.jpg",
-    "028.jpg"
+    "028.jpg",
+    "029.jpg"
   ],
   "rewardImages": [
-    {
-      "name": "reward1.jpg",
-      "probability": 0.05
-    }
-  ]
+  {
+    "name": "reward1.jpg",
+    "probability": 0.05  // 5% 概率出现
+  },
+  {
+    "name": "reward2.jpg",
+    "probability": 0.05  // 5% 概率出现
+  },
+  {
+    "name": "reward3.jpg",
+    "probability": 0.05  // 5% 概率出现
+  }
+]
 }
