--- a/assets/story/config.json
+++ b/assets/story/config.json
@@ -36,7 +36,12 @@
     "035.jpg",
     "036.jpg",
     "037.jpg",
-    "038.jpg"
+    "038.jpg",
+    "039.jpg",
+    "040.jpg",
+    "041.jpg",
+    "042.jpg",
+    "043.jpg"
   ],
   "rewardImages": [
     {
