--- a/assets/story/config.json
+++ b/assets/story/config.json
@@ -30,16 +30,16 @@
   ],
   "rewardImages": [
     {
-      "name": "reward1.jpg",
-      "probability": 0.002
+      "name": "reward1.webp",
+      "probability": 0.005
     },
     {
-      "name": "reward2.jpg",
-      "probability": 0.002
+      "name": "reward2.webp",
+      "probability": 0.005
     },
     {
-      "name": "reward3.jpg",
-      "probability": 0.002
+      "name": "reward3.webp",
+      "probability": 0.005
     }
   ]
 }
