--- a/assets/story/config.json
+++ b/assets/story/config.json
@@ -3,22 +3,21 @@
     "002.jpg",
     "003.jpg",
     "005.jpg",
-    "006.jpg",
     "007.jpg",
     "008.jpg",
     "010.jpg",
     "013.jpg",
-    "014.jpg",
-    "015.jpg",
-    "020.jpg",
-    "021.jpg",
-    "022.jpg",
-    "024.jpg",
+    "014.webp",
+    "015.webp",
+    "020.webp",
+    "021.webp",
+    "022.webp",
+    "024.webp",
     "025.jpg",
-    "026.jpg",
-    "028.jpg",
-    "029.jpg",
-    "030.jpg",
+    "026.webp",
+    "028.webp",
+    "029.webp",
+    "030.webp",
     "031.jpg",
     "032.jpg",
     "036.jpg",
