--- a/assets/story/config.json
+++ b/assets/story/config.json
@@ -18,13 +18,13 @@
     "028.webp",
     "029.webp",
     "030.webp",
-    "031.jpg",
-    "032.jpg",
-    "036.jpg",
-    "037.jpg",
-    "039.jpg",
+    "031.webp",
+    "032.webp",
+    "036.webp",
+    "037.webp",
+    "039.webp",
     "041.jpg",
-    "044.jpg",
+    "044.webp",
     "045.jpg"
   ],
   "rewardImages": [
